# DreamBerd-3-noodles-interpreter

./: .gitignore  Cargo.toml  flake.nix  uni project showcase.md
.github/workflows/: build-on-push.yml
benches/: bench.rs  expressions.rs  function.rs  variable.rs
examples/: fibonacci.db  fibonacci.rs  fizzbuzz.db  fizzbuzz.rs  reverse.db  reverse.rs
src/: cli.rs  interpreter.rs  lib.rs  main.rs  prelude.rs  tests.rs
src/interpreter/: dreamberd.pest  error.rs  evaluators.rs  mod.rs  parser.rs  parsers.rs  runtime.rs  static_analysis.rs
src/interpreter/ast/: expression.rs  function.rs  mod.rs  parsers.rs  uncertain.rs  variable.rs
src/interpreter/evaluator/: mod.rs
src/interpreter/evaluators/: array.rs  class.rs  conditional.rs  control_flow.rs  expression.rs  function.rs  mod.rs  object.rs  parsers.rs  scope.rs  statement.rs  variable.rs
src/interpreter/parsers/: mod.rs  tests.rs  types.rs
src/interpreter/runtime/: error.rs  mod.rs  state.rs  stdlib.rs  value.rs
src/interpreter/runtime/stdlib/: array.rs  debug.rs  function.rs  info.rs  mod.rs  object.rs  stdio.rs  thread.rs
src/interpreter/runtime/value/: bigint.rs  bool.rs  f64.rs  object.rs  symbol.rs
src/interpreter/static_analysis/: mod.rs  parsers.rs  tests.rs
src/interpreter/static_analysis/parsers/: mod.rs  tests.rs
src/prelude/: macros.rs
src/tests/: array.rs  conditional.rs  expression.rs  full_code.rs  function.rs  life_time.rs  mod.rs  object.rs  stdlib.rs  syntax.rs  variable.rs
