cargo-features = ["different-binary-name"]

[package]
authors = ["Eddie Cope (yuu0141 / eddio0141) <eddio0141@gmail.com>"]
description = "A floppy interpreter for DreamBerd"
edition = "2021"
name = "dreamberd_noodles_interpreter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.7", features = ["derive"]}
nom = "7.1.3"
nom_locate = "4.2.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"

[[bin]]
filename = "noodles"
name = "dreamberd_noodles_interpreter"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[[bench]]
harness = false
name = "bench"
