cargo-features = ["different-binary-name"]

[package]
authors = ["Eddie Cope (yuu0141 / eddio0141) <eddio0141@gmail.com>"]
description = "A floppy interpreter for DreamBerd"
edition = "2021"
name = "dreamberd_noodles_interpreter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.75", optional = true}
clap = {version = "4.4.7", features = ["derive"], optional = true}
nom = "7.1.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"
thiserror = "1.0.50"

[features]
bin = ["dep:anyhow", "dep:clap"]

[[bin]]
filename = "noodles"
name = "dreamberd_noodles_interpreter"
required-features = ["bin"]

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[[bench]]
harness = false
name = "bench"

[lints.rust]
unsafe_code = "forbid"
