cargo-features = ["different-binary-name"]

[package]
authors = ["Eddie Cope (yuu0141 / eddio0141) <eddio0141@gmail.com>"]
description = "A floppy interpreter for DreamBerd"
edition = "2021"
name = "dreamberd_noodles_interpreter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.79", optional = true}
clap = {version = "4.4.16", features = ["derive"], optional = true}
lazy_static = "1.4.0"
mimalloc = {version="0.1.39", optional = true}
nom = "7.1.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"
rustyline = "13.0.0"
thiserror = "1.0.56"

[features]
bin = ["dep:anyhow", "dep:clap", "repl"]
repl = []
mimalloc = ["dep:mimalloc"]

[[bin]]
filename = "noodles"
name = "dreamberd_noodles_interpreter"
required-features = ["bin"]

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}
pretty_assertions = "1.4.0"

[[bench]]
harness = false
name = "bench"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "fat" # https://doc.rust-lang.org/cargo/reference/profiles.html#lto
codegen-units = 1 # https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units

[profile.bench]
lto = "fat"
codegen-units = 1

